--- a/views/bookmarks/index.erb
+++ b/views/bookmarks/index.erb
@@ -1,5 +1,5 @@
 <ul>
-  <% @bookmarks.each do |bookmark| %>
-    <li><%= bookmark %></li>
+  <% @bookmarks.each do |bookmarks| %>
+    <li><%= bookmarks %></li>
   <% end %>
 </ul>
